Revision history for Perl extension Perl-MinimumVersion

1.24 Fri 22 Jan 2010
	- The previous changes seem to work well in practice now,
	  switching to prod release. (ADAMK)

1.23_03 Fri 22 Jan 2010
	- The --blame output now prints actually shows which file (ADAMK)

1.23_02 Fri 22 Jan 2010
	- The --blame option now works in the perlver script (ADAMK)

1.23_01 Thu 14 Jan 2010
	- Reworked the internals to capture the version, rule and PPI
	  element responsible for each limitation as P:MV:Reason (ADAMK)
	- Added first experimental version of the new _reason API (ADAMK)
	- Adding 5.8 dependency for "use Carp version ()" (ADAMK)
        - module Errno requires perl 5.5 (Alexandr Ciornii)
        - PPI is no longer compatible with perl 5.5, so P::MV can also
          depend on 5.6 (Alexandr Ciornii)
	- Bumping File::Find::Rule dependency to 0.32 because we break with
	  0.31 (ADAMK)

1.22 Wed  25 Nov 2009
        - Negative length in 'splice' requires perl 5.5 (Alexandr Ciornii)
        - 'mkdir' with one argument requires perl 5.6 (Alexandr Ciornii)
        - 'substr' will not be checked if it is a method name (Alexandr Ciornii)
        - better tests and fix for 3-arg 'open' (Alexandr Ciornii)

1.21 Tue  24 Nov 2009
        - Add 'bytes' to 5.6 pragma (Alexandr Ciornii)
        - Add support for "version numbers" like "v1.1.1" (Alexandr Ciornii)
        - Reimplement _three_argument_open, more tests (Alexandr Ciornii)
          Now check for 3-arg open is working.
        - Check 4-arg substr that requires perl 5.5 (Alexandr Ciornii)
        - Postfix foreach requires perl 5.004.05 (Alexandr Ciornii)
        - Scalar::Util::weaken requires perl 5.006 (Alexandr Ciornii)
        - P::MV itself found incompatibility in 02_main.t with 5.5 (Alexandr Ciornii)

1.20 Sat  4 Apr 2009
	- Change 5.005_03 to 5.005.05 (ADAMK)
        - 5.8 and 5.6 pragmas (Alexandr Ciornii)
        - Fixed error in perlver/find (Alexandr Ciornii)