@@ -1,5 +1,7 @@
 Revision history for Perl extension Perl-MinimumVersion
 
+        - Error in minimum_syntax_reason discovered by perl 5.12 (Alexandr Ciornii)
+
 1.24 Fri 22 Jan 2010
 	- The previous changes seem to work well in practice now,
 	  switching to prod release. (ADAMK)
